--- a/meteor-1-test.jade
+++ b/meteor-1-test.jade
@@ -8,5 +8,5 @@ body
 
 
 template(name="hello")
-  button Click Me
-  p You've pressed the button {{counter}} times.
+  button(onclick="h.s('counter', h.g('counter') + 1) ") Click Me
+  p You've pressed the button {{ g 'counter' }} times.
