--- a/meteor-1-test.jade
+++ b/meteor-1-test.jade
@@ -6,7 +6,8 @@ body
 
   +hello
 
-
 template(name="hello")
   button(onclick="h.s('counter', h.g('counter') + 1) ") Click Me
   p You've pressed the button {{ g 'counter' }} times.
+  {{> quickForm collection="Books" id="insertBookForm" type="insert"}}
+  {{>quickForm collection='Messages' id='qwe' type='insert'}}
